<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App strings -->
    <string name="app_name">LocReporter</string>

    <!-- UI strings -->
    <string name="menu_settings">Settings</string>
    <string name="main_title">LocReporter</string>
    <string name="settings_title">Settings</string>
    <string name="add_loc">Add Location</string>
    <string name="change_sem">Change Semantic</string>
    <string name="localize">Localize</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loc_updated">Location Updated</string>
    <string name="loc_not_updated">Location Not Updated</string>
    <string name="meta_updated">Location Candidates Updated</string>
    <string name="server_no_respond">Server Not Responding</string>

    <!-- Settings strings -->
    <string name="pref_general_category_summ">General settings</string>
    <string name="pref_general_category">General</string>
    <string name="pref_auto_report_summ">Automatically report location when possible</string>
    <string name="pref_auto_report">Automatic Report</string>
    <string name="default_auto_report">true</string>
    <string name="pref_server_category_summ">Server settings</string>
    <string name="pref_server_category">Server</string>
    <string name="pref_sampler_category_summ">Sampler settings</string>
    <string name="pref_sampler_category">Sampler</string>

    <!-- Overwrite bearloc strings -->
    <string name="bearloc_default_server_addr">bearloc.cal-sdb.org</string>
    <string name="bearloc_default_server_port">10080</string>
    <string name="bearloc_default_acc_enable">false</string>
    <string name="bearloc_default_temp_enable">false</string>
    <string name="bearloc_default_pressure_enable">false</string>
    <string name="bearloc_default_audio_enable">false</string>
    <string name="bearloc_default_humidity_enable">false</string>
    <string name="bearloc_default_geocoord_enable">false</string>
    <string name="bearloc_default_gravity_enable">false</string>
    <string name="bearloc_default_gyro_enable">false</string>
    <string name="bearloc_default_light_enable">false</string>
    <string name="bearloc_default_lacc_enable">false</string>
    <string name="bearloc_default_magnetic_enable">false</string>
    <string name="bearloc_default_proximity_enable">false</string>
    <string name="bearloc_default_rotation_enable">false</string>
    <string name="bearloc_default_wifi_enable">true</string>

</resources>