<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="edu.berkeley.locreporter.LocReporterSettingsActivity$SettingsFragment"
        android:summary="@string/pref_general_category_summ"
        android:title="@string/pref_general_category" >
        <extra
            android:name="settings"
            android:value="general" />
    </header>
    <header
        android:fragment="edu.berkeley.locreporter.LocReporterSettingsActivity$SettingsFragment"
        android:summary="@string/pref_server_category_summ"
        android:title="@string/pref_server_category" >
        <extra
            android:name="settings"
            android:value="server" />
    </header>
    <header
        android:fragment="edu.berkeley.locreporter.LocReporterSettingsActivity$SettingsFragment"
        android:summary="@string/pref_sampler_category_summ"
        android:title="@string/pref_sampler_category" >
        <extra
            android:name="settings"
            android:value="sampler" />
    </header>

</preference-headers>